--- a/flex.html
+++ b/flex.html
@@ -6,27 +6,73 @@
         <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
         <title>scroll</title>
         <style type="text/css">
-            .container {
-                display: flex;
-                flex-flow:row;
+            @charset 'utf-8';
+            /* CSS Document */
+            body, nav, dl, dt, dd, p, h1, h2, h3, h4, ul, ol, li, input, button, textarea, footer { margin: 0; padding: 0; }
+            body { font: 18px/1.5'Microsoft Yahei', 'Simsun';color: #555; background: #f8f8f8; -webkit-text-size-adjust: none; text-justify: inter-ideograph; text-align: justify; }
+            h1, h2, h3, h4, h5, h6 { font-size: 100%; }
+            * { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+            form { display: inline; }
+            ul, ol { list-style: none; }
+            a { text-decoration: none; color: #428ad1; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+            a:active, a.active, a:focus { text-decoration: none; color: #7aaddf; }
+            img { vertical-align: middle; -ms-interpolation-mode: bicubic; image-rendering: optimizeQuality; border: 0; }
+            button, input, select, textarea { font-size: 100%; vertical-align: middle; outline: none; }
+            textarea { resize: none; }
+            button, input[type='button'], input[type='reset'], input[type='submit'] { cursor: pointer; -webkit-appearance: button; -moz-appearance: button; }
+            input:focus:-moz-placeholder, input:focus::-webkit-input-placeholder {
+             color: transparent;
             }
-            .left{
-                margin: 0 10px;
-                flex:6;
-                border: 1px solid #000;
+            button::-moz-focus-inner, input::-moz-focus-inner {
+             padding: 0;
+             border: 0;
             }
-            .right{
-                margin: 0 10px 0 0; 
-                flex:4;
-                border: 1px solid #000;
+            header, footer, article, section, nav, menu, hgroup { display: block; clear: both; }
+            @media only screen and (min-width: 801px) and (max-width: 1100px) {
+                body {
+                    font-size: 16px;
+                }
+                .container {
+                    display: flex;
+                    flex-flow: row nowrap;
+                }
+                .left{
+                    margin: 0 10px;
+                    flex:6;
+                    border: 1px solid #000;
+                }
+                .right{
+                    margin: 0 10px 0 0; 
+                    flex:4;
+                    border: 1px solid #000;
+                }
             }
+            @media only screen and (max-width: 800px) {
+                body {
+                    font-size: 15px;
+                }
+                .container {
+                    /*display: block;*/
+                }
+                .left{
+                    padding: 0 10px;
+                    width: 100%;
+                    border: 1px solid #000;
+                }
+                .right{
+                    padding: 0 10px;
+                    width: 100%;
+                    border: 1px solid #000;
+                }
+            }
+            
         </style>
     </head>
 <body >
 
 <div class="container">
-    <div class="left">111111</div>
-    <div class="right">222222</div>
+    <div class="left">11111</div>
+    <div class="right">2222222</div>
 </div>
 
 
