add flexbox test demo

--- a/flex.html
+++ b/flex.html
@@ -159,13 +159,11 @@
             }
 
             .box9{
-
+                display: flex;
+                flex-wrap:wrap;
+                justify-content:space-between;
+                align-content:space-between;
             }
-            .box9{
-
-            }
-
-
         </style>
     </head>
     <body>
@@ -232,22 +230,16 @@
             </div>
         </div>
         
-        <div class="box box6">
-            <div class="column">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="column">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="column">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
+        <div class="box box9">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
         </div>
     </div>
     </body>
