--- a/flex.html
+++ b/flex.html
@@ -86,6 +86,7 @@
                 display: inline-block;
                 border: 10px solid #000;
                 border-radius: 10px;
+                /*此处添加margin-right是为了确保一行最多只能展示3个原点*/
                 margin-right: 5px;
             }
 
