--- a/flex.html
+++ b/flex.html
@@ -165,6 +165,13 @@
                 justify-content:space-between;
                 align-content:space-between;
             }
+
+            .box6_2{
+                display: flex;
+                flex-wrap:wrap;
+                justify-content:space-between;
+                align-content:space-between;
+            }
         </style>
     </head>
     <body>
@@ -231,6 +238,15 @@
             </div>
         </div>
         
+        <div class="box box6_2">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+
         <div class="box box9">
             <span class="item"></span>
             <span class="item"></span>
